# Exercices

./: CMakeLists.txt  README.md
Basic/: CMakeLists.txt  README.md
ECS/: CMakeLists.txt  README.md
ECS/src/: main.cpp
GoL/: CMakeLists.txt  README.md
Puissance4/: CMakeLists.txt  README.md
